# cruft

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  README.md  commit.md  justfile
.cargo/: config.toml
.config/: nextest.toml
assets/shaders/: geist_grid.wgsl  procedural_array_material.wgsl  procedural_texture.wgsl  voxel_cull.wgsl  voxel_quads.wgsl
assets/texture_data/: blocks.texture.json  prompt.md
crates/app/: AGENTS.md  Cargo.toml
crates/app/src/: main.rs
crates/app/src/plugins/: app_ui.rs  mod.rs  procedural_texture.rs
crates/game_flow/: AGENTS.md  Cargo.toml
crates/game_flow/src/: boot.rs  lib.rs  request.rs  state.rs
crates/gameplay/: Cargo.toml
crates/gameplay/src/: fps_controller.rs  lib.rs  plugin.rs  voxel_collision.rs
crates/proc_textures/: AGENTS.md  Cargo.toml
crates/proc_textures/src/: compiler.rs  error.rs  export.rs  generator.rs  lib.rs  plugin.rs  schema.rs
crates/save/: AGENTS.md  Cargo.toml
crates/save/src/: api.rs  io.rs  lib.rs  types.rs
crates/screens/: AGENTS.md  Cargo.toml
crates/screens/src/: boot_loading.rs  common.rs  dev_hud.rs  in_game_loading.rs  lib.rs  main_menu.rs  pause_menu.rs  save_select.rs
crates/ui/: AGENTS.md  Cargo.toml
crates/ui/src/: components.rs  events.rs  geist_ui.rs  lib.rs  theme.rs  ui.rs
crates/voxel/: Cargo.toml
crates/voxel/src/: blocks.rs  coords.rs  lib.rs  meshing.rs  render.rs  storage.rs  terrain.rs  world.rs
crates/voxel/src/worldgen/: factory.rs  mod.rs  modern_surface.rs  superflat.rs
crates/worldgen_spec/: Cargo.toml
crates/worldgen_spec/src/: lib.rs
docs/: geist_ui_guide.md  textures.md
docs/voxel/: AGENTS.md  far_volumetric.md  lighting.md  meshing.md  overview.md  persistence.md  rendering.md  storage.md  storage_blocks.md  storage_layers.md  worldgen_surface.md
scripts/: cargo.cjs
skills/bevy/: SKILL.md
skills/bevy/references/: accessibility_a11y.md  animation.md  anti_alias_post_process.md  app_plugins_schedules.md  assets.md  async_tasks.md  audio.md  camera_views_render_targets.md  debug_profiling_devtools_remote.md  dynamic_linking_dylib.md  ecs_advanced_patterns.md  ecs_fundamentals.md  events_messages_observers.md  examples_catalog.md  index.md  input_window.md  lighting_shadows_fog.md  logging_tracing.md  math_transforms.md  mesh_image_color.md  overview_crates_plugins.md  picking.md  platforms_winit_android_wasm.md  project_setup_features.md  ray_tracing_solari.md  relationships_hierarchy.md  render_pipeline_custom_rendering.md  rendering_2d.md  rendering_3d_pbr.md  rendering_architecture.md  scenes_gltf.md  shaders_materials.md  states.md  time_fixed_timestep.md  ui.md  ui_tooling_widgets_focus.md
skills/wgsl/: SKILL.md
