[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/ui",
    "crates/game_flow",
    "crates/save",
    "crates/voxel",
    "crates/worldgen_spec",
    "crates/proc_textures",
    "crates/screens",
    "crates/gameplay",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = []
description = "A Minecraft-like game built with Bevy"

[workspace.dependencies]
bevy = { version = "0.18", features = ["sysinfo_plugin"] }
bevy_app = "0.18"
bevy_ecs = "0.18"
bevy_state = "0.18"
bevy_tasks = "0.18"
bevy_embedded_assets = "0.15"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitflags = "2"
directories = "6"
time = { version = "0.3", features = ["serde", "formatting"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
noise = "0.9"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
codegen-backend = "llvm"
