[package]
name = "app"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
bevy.workspace = true
bevy_embedded_assets.workspace = true
cruft-ui = { path = "../ui" }
cruft-game-flow = { path = "../game_flow" }
cruft-save = { path = "../save" }
cruft-proc-textures = { path = "../proc_textures" }
cruft-screens = { path = "../screens" }
cruft-gameplay = { path = "../gameplay" }
log.workspace = true
