[package]
name = "cruft-game-flow"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_state.workspace = true
bitflags.workspace = true
cruft-worldgen-spec = { version = "0.1.0", path = "../worldgen_spec" }
