[package]
name = "cruft-proc-textures"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
bevy.workspace = true
cruft-game-flow = { path = "../game_flow" }
log.workspace = true
noise.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3 = "1.8"
png = "0.17"
serde_path_to_error = "0.1"

[[bin]]
name = "export_textures"
path = "src/bin/export_textures.rs"
