[package]
name = "cruft-save"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
bevy.workspace = true
cruft-game-flow = { path = "../game_flow" }
cruft-worldgen-spec = { path = "../worldgen_spec" }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true
log.workspace = true
