[package]
name = "cruft-save"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
bevy.workspace = true
cruft-game-flow = { path = "../game_flow" }
redb = "2"
postcard = { version = "1", features = ["use-std"] }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true
zstd = "0.13"
