[package]
name = "cruft-save"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_state.workspace = true
bevy_tasks.workspace = true
cruft-game-flow = { path = "../game_flow" }
cruft-worldgen-spec = { path = "../worldgen_spec" }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true
log.workspace = true
