[package]
name = "cruft-voxel"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
publish = false

[dependencies]
bevy.workspace = true
cruft-game-flow = { path = "../game_flow" }
cruft-proc-textures = { path = "../proc_textures" }
cruft-save = { path = "../save" }
cruft-worldgen-spec = { path = "../worldgen_spec" }
log.workspace = true
noise.workspace = true
